--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,7 @@
 @import "blocks/list";
 @import "blocks/socials";
 @import "blocks/contacts";
-
 @import "blocks/hamburger";
+
+@import "blocks/main";
 
