--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,4 +15,7 @@
 @import "blocks/hamburger";
 
 @import "blocks/main";
+@import "blocks/video";
 
+//@import "blocks/clients";
+//@import "blocks/carousel/owl.carousel";
