--- a/resources/sass/blocks/main.scss
+++ b/resources/sass/blocks/main.scss
@@ -9,19 +9,53 @@
     grid-column: span 1;
     grid-row: span 1;
     padding: 0 2em;
-    margin: auto 0;
+    margin: 47% 0 53% 0;
     text-align: center;
 }
 
 .main__title {
     text-align: center;
+    line-height: 2;
+    font-size: 40px;
+    font-weight: normal;
+}
+
+.main__text {
+    font-size: 20px;
+    line-height: 2;
 }
 
 
 .main__video {
+    position: relative;
     grid-column: span 1;
     grid-row: span 1;
     background-color: coral;
+    background: url("/../img/dsc03149.jpg") center center no-repeat;
+    background-size: cover;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, .5);
+        z-index: 1;
+    }
+}
+
+.main__video--wrapper {
+    position: relative;
+    z-index: 3;
+    color: #fff;
+    text-align: center;
+    padding: 50px;
 }
 
 .main__partners {
@@ -31,7 +65,8 @@
     grid-column: span 2;
     grid-row: span 1;
     margin-left: 200px;
-    height: 3em;
+    height: 5em;
     width: calc(100% - 200px);
     background-color: grey;
+    z-index: 2;
 }
