--- a/public/css/app.css
+++ b/public/css/app.css
@@ -466,7 +466,7 @@ body {
 .navbar__socials {
   display: block;
   margin-top: 10%;
-  margin-left: auto;
+  margin-left: 1.5em;
   margin-right: auto;
 }
 
