--- a/resources/sass/blocks/navbar.scss
+++ b/resources/sass/blocks/navbar.scss
@@ -38,7 +38,7 @@
 .navbar__socials {
     display: block;
     margin-top: 10%;
-    margin-left: auto;
+    margin-left: 1.5em;
     margin-right: auto;
 }
 
