coming soon page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -827,13 +827,21 @@ body {
 }
 
 .main__title {
+  font-family: "Josefin Sans", sans-serif;
   text-align: center;
-  line-height: 2;
+  line-height: 1;
   font-size: 40px;
-  font-weight: normal;
+  font-weight: 700;
+}
+
+.main__title span {
+  font-size: 30px;
+  font-weight: 200;
+  text-transform: uppercase;
 }
 
 .main__text {
+  margin-top: 17%;
   font-size: 20px;
   line-height: 2;
 }
@@ -883,6 +891,44 @@ body {
   width: calc(100% - 200px);
   background-color: grey;
   z-index: 2;
+  text-align: center;
+}
+
+@media (max-width: 980px) {
+  .main {
+    grid-template-columns: 1fr;
+  }
+
+  .main__info {
+    -webkit-box-ordinal-group: 3;
+            order: 2;
+    grid-column: span 1;
+    grid-row: span 1;
+    margin-top: 5%;
+    margin-bottom: 10%;
+  }
+
+  .main__info .main__text {
+    margin-top: 5%;
+  }
+
+  .main__video {
+    -webkit-box-ordinal-group: 2;
+            order: 1;
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+
+  .main__partners {
+    -webkit-box-ordinal-group: 4;
+            order: 3;
+    position: relative;
+    margin-left: 0;
+    width: 100%;
+    grid-column: span 1;
+    grid-row: span 1;
+    margin-top: auto;
+  }
 }
 
 .video {
@@ -905,8 +951,8 @@ body {
   border-radius: 50%;
   border: 3px solid #fff;
   z-index: 10;
-  -webkit-transition-property: background;
-  transition-property: background;
+  -webkit-transition-property: background, border-color;
+  transition-property: background, border-color;
   -webkit-transition-duration: 500ms;
           transition-duration: 500ms;
 }
@@ -927,7 +973,16 @@ body {
 }
 
 .video__btn:hover svg {
-  fill: red;
+  fill: #ffc107;
+}
+
+.video__btn:focus {
+  background: #bfbfbf;
+  border-color: #bfbfbf;
+}
+
+.video__btn:focus svg {
+  fill: #876500;
 }
 
 .video__text {
