--- a/resources/sass/blocks/main.scss
+++ b/resources/sass/blocks/main.scss
@@ -33,13 +33,12 @@
     line-height: 2;
 }
 
-
 .main__video {
     position: relative;
     grid-column: span 1;
     grid-row: span 1;
     background-color: coral;
-    background: url("/../img/dsc03149.jpg") center center no-repeat;
+    background: url("../../img/main-banner.jpg") center center no-repeat;
     background-size: cover;
 
     display: flex;
