--- a/public/css/app.css
+++ b/public/css/app.css
@@ -432,6 +432,7 @@ body {
   height: 100vh;
   background-color: #333333;
   overflow: auto;
+  z-index: 9999;
 }
 
 .navbar__logo {
@@ -444,7 +445,7 @@ body {
   font-family: "Josefin Sans", sans-serif;
   color: #ffc107;
   text-decoration: none;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 700;
 }
 
@@ -993,11 +994,12 @@ body {
 .services {
   display: grid;
   grid-template-columns: 1fr;
+  padding-bottom: 4%;
 }
 
 .services__header {
   height: 18em;
-  background: url(/images/services-banner.jpg?a59b51112b6d6aa71ff14efbaa49113d) center no-repeat;
+  background: url(/images/services-banner.jpg?bc1a4136a1508b154686708d7c26d875) center no-repeat;
   background-size: cover;
   background-position: center top;
   margin-bottom: 30px;
@@ -1026,19 +1028,40 @@ body {
   -webkit-box-pack: start;
           justify-content: flex-start;
   padding: 2em;
+  background-color: #ddd;
 }
 
 .card__head {
-  height: 15em;
   background-color: #97bf0d;
+  position: relative;
+  padding-bottom: 56.25%;
+  /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+.card__head iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .card__title {
   text-align: center;
+  font-size: 35px;
+  text-transform: uppercase;
+  line-height: 1;
+  font-weight: normal;
 }
 
 .card__text {
   min-height: 120px;
+  line-height: 1.5;
+  margin-bottom: 5%;
+  text-align: justify;
 }
 
 .card__btn {
@@ -1049,6 +1072,10 @@ body {
   padding: 3%;
   color: #e9eae2;
   text-transform: uppercase;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+  -webkit-transition-duration: 500ms;
+          transition-duration: 500ms;
 }
 
 .card__btn:hover {
@@ -1061,7 +1088,12 @@ body {
 }
 
 .card__head--translation {
-  background: url(/images/translation.jpg?a96da929ae291ad3175f1471f85c5e8e) center no-repeat;
+  background: url(/images/translation.jpg?25a1df77a5e7eb475eb207666b77573b) center no-repeat;
   background-size: 100%;
+}
+
+.card__head--promotion {
+  background: url(/images/SEO15.jpg?6b1457585722cc32d52c2ff885c4225d) center no-repeat;
+  background-size: cover;
 }
 
