--- a/resources/sass/blocks/card.scss
+++ b/resources/sass/blocks/card.scss
@@ -5,19 +5,39 @@
     //padding-left: 2em;
     //padding-right: 2em;
     padding: 2em;
+    background-color: #ddd;
 }
 
 .card__head {
-    height: 15em;
     background-color: #97bf0d;
+    position: relative;
+    padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .card__title {
     text-align: center;
+    font-size: 35px;
+    text-transform: uppercase;
+    line-height: 1;
+    font-weight: normal;
 }
 
 .card__text {
     min-height: 120px;
+    line-height: 1.5;
+    margin-bottom: 5%;
+    text-align: justify;
 }
 
 .card__btn {
@@ -28,6 +48,8 @@
     padding: 3%;
     color: $primary;
     text-transform: uppercase;
+    transition-property: color, background-color;
+    transition-duration: 500ms;
 
     &:hover {
         background: $black;
@@ -50,6 +72,7 @@
     background-size: 100%;
 }
 .card__head--promotion {
-
+    background: url("../../img/SEO15.jpg") center no-repeat;
+    background-size: cover;
 }
 
