--- a/resources/sass/blocks/card.scss
+++ b/resources/sass/blocks/card.scss
@@ -9,7 +9,7 @@
 }
 
 .card__head {
-    background-color: #97bf0d;
+    //background-color: #97bf0d;
     position: relative;
     padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
     padding-top: 30px;
