--- a/resources/sass/blocks/services.scss
+++ b/resources/sass/blocks/services.scss
@@ -17,7 +17,7 @@
     grid-template-columns: repeat(2, minmax(320px, auto));
     grid-gap: 1em;
     justify-content: center;
-    padding: 2%;
+    padding: 2% 10%;
 }
 
 .services__card {
