--- a/public/css/app.css
+++ b/public/css/app.css
@@ -607,6 +607,14 @@ body {
   color: #ffc107;
 }
 
+.list__element--active {
+  background-color: #000;
+}
+
+.list__element--active .list__link {
+  color: #ffc107;
+}
+
 .list__link {
   display: block;
   margin: 0;
@@ -1028,7 +1036,7 @@ body {
   grid-gap: 1em;
   -webkit-box-pack: center;
           justify-content: center;
-  padding: 2%;
+  padding: 2% 10%;
 }
 
 .services__card {
@@ -1049,7 +1057,6 @@ body {
 }
 
 .card__head {
-  background-color: #97bf0d;
   position: relative;
   padding-bottom: 56.25%;
   /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
@@ -1112,5 +1119,78 @@ body {
 .card__head--promotion {
   background: url(/images/SEO15.jpg?6b1457585722cc32d52c2ff885c4225d) center no-repeat;
   background-size: cover;
+}
+
+.portfolio {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.portfolio__header {
+  grid-column: span 1;
+  height: 18em;
+  width: 100%;
+  text-align: center;
+  background-color: #869791;
+}
+
+.portfolio__header h1 {
+  height: 15%;
+}
+
+.portfolio__filter {
+  grid-column: span 1;
+}
+
+.filter {
+  display: -webkit-box;
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.filter__element {
+  display: block;
+  flex-basis: 33.33%;
+  text-align: center;
+  border-bottom: 3px solid #333333;
+  -webkit-transition-duration: 500ms;
+          transition-duration: 500ms;
+  -webkit-transition-property: border-color;
+  transition-property: border-color;
+}
+
+.filter__element:hover {
+  border-color: red;
+  cursor: pointer;
+}
+
+.filter__element--active {
+  border-color: red;
+}
+
+.filter__element--active .filter__link {
+  color: red;
+}
+
+.filter__link {
+  padding: 2% 25%;
+  font-size: 20px;
+  text-decoration: none;
+  color: #000;
+  line-height: 2;
+  -webkit-transition-duration: 500ms;
+          transition-duration: 500ms;
+  -webkit-transition-property: color;
+  transition-property: color;
+}
+
+.filter__link:hover {
+  color: red;
 }
 
