--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,5 +19,8 @@
 
 //@import "blocks/clients";
 //@import "blocks/carousel/owl.carousel";
+
 @import "blocks/services";
 @import "blocks/card";
+@import "blocks/portfolio";
+@import "blocks/filter";
