--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1142,6 +1142,13 @@ body {
   grid-column: span 1;
 }
 
+.portfolio__works {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
 .filter {
   display: -webkit-box;
   display: flex;
@@ -1192,5 +1199,32 @@ body {
 
 .filter__link:hover {
   color: red;
+}
+
+.works {
+  list-style: none;
+}
+
+.works__element {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+}
+
+.works__video {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+  margin-right: 5%;
+}
+
+.works__video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
