--- a/resources/sass/blocks/portfolio.scss
+++ b/resources/sass/blocks/portfolio.scss
@@ -19,3 +19,10 @@
 .portfolio__filter {
     grid-column: span 1;
 }
+
+.portfolio__works {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding-left: 15%;
+    padding-right: 15%;
+}
