--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 @import "normalize";
-@import "variables";
+@import "colors";
 @import "fonts";
 @import "mixins";
 @import "core";
