--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1206,8 +1206,9 @@ body {
 }
 
 .works__element {
+  margin-top: 2%;
   display: grid;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: 1fr 2fr;
 }
 
 .works__video {
