--- a/public/css/app.css
+++ b/public/css/app.css
@@ -436,7 +436,7 @@ body {
 }
 
 .navbar__logo {
-  margin: 1em auto 0 auto;
+  margin: 1rem auto 0 1.5rem;
 }
 
 .logo__link {
@@ -455,7 +455,7 @@ body {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
           flex-direction: column;
-  margin-top: 5em;
+  margin-top: 5rem;
   list-style: none;
   padding: 0;
 }
@@ -467,7 +467,7 @@ body {
 .navbar__socials {
   display: block;
   margin-top: 10%;
-  margin-left: 1.5em;
+  margin-left: 1.5rem;
   margin-right: auto;
 }
 
@@ -490,7 +490,7 @@ body {
   }
 
   .navbar__logo {
-    margin: auto auto auto 1em;
+    margin: auto auto auto 1rem;
     -webkit-box-ordinal-group: 2;
             order: 1;
   }
@@ -830,8 +830,8 @@ body {
 .main__info {
   grid-column: span 1;
   grid-row: span 1;
-  padding: 0 2em;
-  margin: 47% 0 53% 0;
+  padding: 0 2rem;
+  margin: auto 0;
   text-align: center;
 }
 
@@ -841,6 +841,7 @@ body {
   line-height: 1;
   font-size: 40px;
   font-weight: 700;
+  margin-top: 0;
 }
 
 .main__title span {
@@ -923,6 +924,7 @@ body {
 @media (max-width: 980px) {
   .main {
     grid-template-columns: 1fr;
+    height: 89vh;
   }
 
   .main__info {
@@ -931,7 +933,7 @@ body {
     grid-column: span 1;
     grid-row: span 1;
     margin-top: 5%;
-    margin-bottom: 10%;
+    margin-bottom: auto;
   }
 
   .main__info .main__text {
