--- a/resources/sass/blocks/services.scss
+++ b/resources/sass/blocks/services.scss
@@ -14,15 +14,16 @@
 
 .services__content {
     display: grid;
-    grid-template-columns: repeat(2, minmax(320px, auto));
-    grid-gap: 1em;
+    //grid-template-columns: repeat(2, minmax(320px, auto));
+    grid-template-columns: 1fr;
+    grid-gap: 1rem;
     justify-content: center;
-    padding: 2% 10%;
+    padding: 2% 5%;
 }
 
-.services__card {
-    grid-column: span 1;
-    grid-row: span 1;
-}
+//.services__card {
+//    grid-column: span 1;
+//    grid-row: span 1;
+//}
 
 
