--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1034,28 +1034,40 @@ body {
 
 .services__content {
   display: grid;
-  grid-template-columns: repeat(2, minmax(320px, auto));
-  grid-gap: 1em;
+  grid-template-columns: 1fr;
+  grid-gap: 1rem;
   -webkit-box-pack: center;
           justify-content: center;
-  padding: 2% 10%;
-}
-
-.services__card {
-  grid-column: span 1;
-  grid-row: span 1;
+  padding: 2% 5%;
 }
 
 .card {
   display: -webkit-box;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
   -webkit-box-pack: start;
           justify-content: flex-start;
-  padding: 2em;
+  padding: 1rem;
   background-color: #ddd;
+}
+
+.card:nth-child(odd) .card__head {
+  -webkit-box-ordinal-group: 2;
+          order: 1;
+}
+
+.card:nth-child(odd) .card__info {
+  -webkit-box-ordinal-group: 3;
+          order: 2;
+}
+
+.card:nth-child(even) .card__head {
+  -webkit-box-ordinal-group: 3;
+          order: 2;
+}
+
+.card:nth-child(even) .card__info {
+  -webkit-box-ordinal-group: 2;
+          order: 1;
 }
 
 .card__head {
@@ -1065,6 +1077,7 @@ body {
   padding-top: 30px;
   height: 0;
   overflow: hidden;
+  width: 100%;
 }
 
 .card__head iframe {
@@ -1073,6 +1086,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.card__info {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
 }
 
 .card__title {
