--- a/resources/sass/blocks/card.scss
+++ b/resources/sass/blocks/card.scss
@@ -1,11 +1,27 @@
 .card {
     display: flex;
-    flex-direction: column;
+    //flex-direction: column;
     justify-content: flex-start;
-    //padding-left: 2em;
-    //padding-right: 2em;
-    padding: 2em;
+    padding: 1rem;
     background-color: #ddd;
+
+    &:nth-child(odd) {
+        .card__head {
+            order: 1;
+        }
+        .card__info {
+            order: 2;
+        }
+    }
+
+    &:nth-child(even) {
+        .card__head {
+            order: 2;
+        }
+        .card__info {
+            order: 1;
+        }
+    }
 }
 
 .card__head {
@@ -15,6 +31,7 @@
     padding-top: 30px;
     height: 0;
     overflow: hidden;
+    width: 100%;
 
     iframe {
         position: absolute;
@@ -23,6 +40,11 @@
         width: 100%;
         height: 100%;
     }
+}
+
+.card__info {
+    display: flex;
+    flex-direction: column;
 }
 
 .card__title {
