--- a/resources/sass/blocks/main.scss
+++ b/resources/sass/blocks/main.scss
@@ -29,6 +29,12 @@
     }
 }
 
+.main__img {
+    width: 250px;
+    height: 160px;
+    fill: $menuBg;
+}
+
 .main__text {
     margin-top: 17%;
     font-size: 20px;
