--- a/public/css/app.css
+++ b/public/css/app.css
@@ -439,14 +439,16 @@ body {
   margin: 1rem auto 0 1.5rem;
 }
 
-.logo__link {
-  display: block;
-  box-sizing: border-box;
-  font-family: "Josefin Sans", sans-serif;
-  color: #ffc107;
-  text-decoration: none;
-  font-size: 30px;
-  font-weight: 700;
+.logo__link:hover .logo__img,
+.logo__link:focus .logo__img,
+.logo__link:active .logo__img {
+  fill: red;
+}
+
+.logo__img {
+  width: 150px;
+  height: 80px;
+  fill: white;
 }
 
 .navbar__list {
@@ -848,6 +850,12 @@ body {
   font-size: 30px;
   font-weight: 200;
   text-transform: uppercase;
+}
+
+.main__img {
+  width: 250px;
+  height: 160px;
+  fill: #333333;
 }
 
 .main__text {
