--- a/resources/sass/blocks/navbar.scss
+++ b/resources/sass/blocks/navbar.scss
@@ -15,13 +15,26 @@
 }
 
 .logo__link {
-    display: block;
-    box-sizing: border-box;
-    font-family: 'Josefin Sans', sans-serif;
-    color: $activeColor;
-    text-decoration: none;
-    font-size: 30px;
-    font-weight: 700;
+    //display: block;
+    //box-sizing: border-box;
+    //font-family: 'Josefin Sans', sans-serif;
+    //color: $activeColor;
+    //text-decoration: none;
+    //font-size: 30px;
+    //font-weight: 700;
+
+    &:hover, &:focus, &:active {
+        .logo__img {
+            fill: red;
+        }
+    }
+}
+
+.logo__img {
+    width: 150px;
+    height: 80px;
+    fill: white;
+    //z-index: 9999;
 }
 
 .navbar__list {
