--- a/resources/sass/blocks/card.scss
+++ b/resources/sass/blocks/card.scss
@@ -33,11 +33,65 @@
     font-weight: normal;
 }
 
+.card__subtitle {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
 .card__text {
     min-height: 120px;
     line-height: 1.5;
     margin-bottom: 5%;
     text-align: justify;
+
+    p {
+        margin: 0.4rem 0;
+    }
+}
+
+.card__text--hide {
+
+    label {
+        font-size: 0.8rem;
+        color: $menuBg;
+        text-transform: uppercase;
+        border-bottom: 1px dotted $menuBg;
+        padding: 0;
+        cursor: pointer;
+        display: inline-block;
+        transition-duration: 500ms;
+        transition-property: color, border;
+
+        &:hover {
+            color: red;
+            border-color: red;
+        }
+    }
+
+}
+
+.hide {
+    display: none;
+}
+
+//.hide + label {
+//    border-bottom: 1px dotted green;
+//    padding: 0;
+//    cursor: pointer;
+//    display: inline-block;
+//}
+
+.hide + label ~ p {
+    display: none;
+}
+
+.hide:checked + label {
+    color: $activeColor;
+    border-bottom: 0;
+}
+
+.hide:checked + label ~ p {
+    display: inline-block;
 }
 
 .card__btn {
