--- a/resources/sass/blocks/services.scss
+++ b/resources/sass/blocks/services.scss
@@ -15,9 +15,9 @@
 .services__content {
     display: grid;
     grid-template-columns: repeat(2, minmax(320px, auto));
-    grid-gap: 1em;
+    grid-gap: 1rem;
     justify-content: center;
-    padding: 2% 10%;
+    padding: 2% 5%;
 }
 
 .services__card {
@@ -25,4 +25,19 @@
     grid-row: span 1;
 }
 
+@media (max-width: 768px) {
 
+    .services__content {
+        grid-template-columns: 1fr;
+    }
+
+}
+
+@media (max-width: 560px) {
+
+    .services__content {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+}
