--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1218,9 +1218,10 @@ body {
 
 .portfolio__works {
   display: grid;
-  grid-template-columns: 1fr;
-  padding-left: 15%;
-  padding-right: 15%;
+  grid-template-columns: repeat(2, 50%);
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 5%;
 }
 
 .filter {
@@ -1282,7 +1283,7 @@ body {
 .works__element {
   margin-top: 2%;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr;
 }
 
 .works__video {
@@ -1301,5 +1302,32 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.works__info {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: black;
+  opacity: 0.7;
+  width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.works__title {
+  color: white;
+}
+
+.works__date {
+  color: white;
+}
+
+.works__type {
+  color: white;
+}
+
+.works__description {
+  color: white;
 }
 
