--- a/resources/sass/blocks/portfolio.scss
+++ b/resources/sass/blocks/portfolio.scss
@@ -22,7 +22,8 @@
 
 .portfolio__works {
     display: grid;
-    grid-template-columns: 1fr;
-    padding-left: 15%;
-    padding-right: 15%;
+    grid-template-columns: repeat(2, 50%);
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
 }
