--- a/resources/sass/blocks/works.scss
+++ b/resources/sass/blocks/works.scss
@@ -5,7 +5,7 @@
 .works__element {
     margin-top: 2%;
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr;
 }
 
 .works__video {
@@ -26,5 +26,32 @@
 }
 
 .works__info {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: black;
+    opacity: 0.7;
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 
+.works__title {
+    color: white;
+}
+
+.works__details {
+
+}
+
+.works__date {
+    color: white;
+}
+
+.works__type {
+    color: white;
+}
+
+.works__description {
+    color: white;
 }
