--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1219,9 +1219,28 @@ body {
 .portfolio__works {
   display: grid;
   grid-template-columns: repeat(2, 50%);
+  grid-gap: 1rem;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
   padding-left: 5%;
   padding-right: 5%;
   padding-bottom: 5%;
+}
+
+@media (max-width: 768px) {
+  .portfolio__works {
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
+  }
+}
+
+@media (max-width: 560px) {
+  .portfolio__works {
+    grid-template-columns: 1fr;
+  }
 }
 
 .filter {
@@ -1276,12 +1295,37 @@ body {
   color: red;
 }
 
+@media (max-width: 768px) {
+  .filter__link {
+    padding: 2% 15%;
+  }
+}
+
+@media (max-width: 500px) {
+  .filter {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    -webkit-box-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+            align-items: start;
+  }
+
+  .filter__element {
+    width: 100%;
+  }
+
+  .filter__link {
+    padding: 2% 33%;
+  }
+}
+
 .works {
   list-style: none;
 }
 
 .works__element {
-  margin-top: 2%;
   display: grid;
   grid-template-columns: 1fr;
 }
@@ -1293,7 +1337,6 @@ body {
   padding-top: 30px;
   height: 0;
   overflow: hidden;
-  margin-right: 5%;
 }
 
 .works__video iframe {
@@ -1306,7 +1349,7 @@ body {
 
 .works__info {
   position: absolute;
-  bottom: 0;
+  bottom: 1rem;
   left: 0;
   background: black;
   opacity: 0.7;
@@ -1316,7 +1359,21 @@ body {
 }
 
 .works__title {
+  display: block;
+  border-bottom: 2px solid red;
+  margin-right: 2rem;
+  margin-bottom: 0;
+  padding-bottom: 5px;
   color: white;
+}
+
+.works__details {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
+  margin: 0.2rem 2rem 0 0;
+  font-size: 0.8rem;
 }
 
 .works__date {
@@ -1329,5 +1386,6 @@ body {
 
 .works__description {
   color: white;
+  overflow: hidden;
 }
 
