--- a/resources/sass/blocks/works.scss
+++ b/resources/sass/blocks/works.scss
@@ -3,7 +3,7 @@
 }
 
 .works__element {
-    margin-top: 2%;
+    //margin-top: 2%;
     display: grid;
     grid-template-columns: 1fr;
 }
@@ -14,7 +14,7 @@
     padding-top: 30px;
     height: 0;
     overflow: hidden;
-    margin-right: 5%;
+    //margin-right: 5%;
 
     iframe {
         position: absolute;
@@ -27,7 +27,7 @@
 
 .works__info {
     position: absolute;
-    bottom: 0;
+    bottom: 1rem;
     left: 0;
     background: black;
     opacity: 0.7;
@@ -37,11 +37,19 @@
 }
 
 .works__title {
+    display: block;
+    border-bottom: 2px solid red;
+    margin-right: 2rem;
+    margin-bottom: 0;
+    padding-bottom: 5px;
     color: white;
 }
 
 .works__details {
-
+    display: flex;
+    justify-content: space-between;
+    margin: 0.2rem 2rem 0 0;
+    font-size: 0.8rem;
 }
 
 .works__date {
@@ -54,4 +62,6 @@
 
 .works__description {
     color: white;
+    overflow: hidden;
 }
+
