--- a/public/css/app.css
+++ b/public/css/app.css
@@ -712,17 +712,54 @@ body {
 }
 
 .contacts {
-  max-height: 100vh;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  min-height: 100vh;
 }
 
 .contacts__title {
   display: block;
   text-align: center;
+  margin: 5rem 0;
 }
 
 .contacts__form {
   width: 80%;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contacts__footer {
+  margin-top: auto;
+  padding: 2rem 0;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: end;
+          align-items: flex-end;
+}
+
+.contacts__item {
+  font-size: 1.5rem;
+  color: #333333;
+  line-height: 1;
+}
+
+.contacts__item p {
+  margin: 15px 0 0 0;
+}
+
+.contacts__item .contacts__link {
+  color: #333333;
+}
+
+.contacts__item .contacts__link:hover {
+  color: red;
+  border-color: red;
 }
 
 .contacts__element {
@@ -1447,7 +1484,7 @@ body {
 .form__element .form__button {
   display: block;
   margin: 0 0 0 auto;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
   background: none;
   border: 2px solid #333333;
   border-radius: 1.5rem;
