--- a/resources/sass/blocks/contacts.scss
+++ b/resources/sass/blocks/contacts.scss
@@ -1,15 +1,47 @@
 .contacts {
-    max-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    //background: url("/images/BAD7_Logo.svg") center center no-repeat;
+    //background-size: cover;
 }
 
 .contacts__title {
     display: block;
     text-align: center;
+    margin: 5rem 0;
 }
 
 .contacts__form {
     width: 80%;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contacts__footer {
+    margin-top: auto;
+    padding: 2rem 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+}
+
+.contacts__item {
+    font-size: 1.5rem;
+    color: $menuBg;
+    line-height: 1;
+
+    p {
+        margin: 15px 0 0 0;
+    }
+    .contacts__link {
+        color: $menuBg;
+
+        &:hover {
+            color: red;
+            border-color: red;
+        }
+    }
 }
 
 .contacts__element {
