--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,3 +26,8 @@
 @import "blocks/filter";
 @import "blocks/works";
 @import "blocks/form";
+
+
+// Magnific Popup v1.1.0
+@import "magnific_popap";
+@import "blocks/popupOrderForm";
