--- a/resources/sass/blocks/services.scss
+++ b/resources/sass/blocks/services.scss
@@ -8,7 +8,7 @@
     height: 18em;
     background: url("../../img/services-banner.jpg") center no-repeat;
     background-size: cover;
-    background-position: center top;
+    background-position: center bottom;
     margin-bottom: 30px;
 }
 
