--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,6 +27,7 @@
 @import "blocks/works";
 @import "blocks/form";
 
+@import "blocks/pagination";
 
 // Magnific Popup v1.1.0
 @import "magnific_popap";
