--- a/resources/sass/blocks/contacts.scss
+++ b/resources/sass/blocks/contacts.scss
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    //background: url("/images/BAD7_Logo.svg") center center no-repeat;
-    //background-size: cover;
+    background: url("/images/contact-bg1.jpg") center center no-repeat;
+    background-size: cover;
 }
 
 .contacts__title {
