--- a/public/css/app.css
+++ b/public/css/app.css
@@ -718,7 +718,7 @@ body {
   -webkit-box-direction: normal;
           flex-direction: column;
   min-height: 100vh;
-  background: url("/images/contact-bg1.jpg") center center no-repeat;
+  background: url("/images/contact-bg2.jpg") center center no-repeat;
   background-size: cover;
 }
 
@@ -2021,6 +2021,8 @@ img.mfp-img {
   -webkit-box-direction: normal;
           flex-direction: column;
   background: #fff;
+  background: url("/images/contact-bg2.jpg") center center no-repeat;
+  background-size: cover;
 }
 
 .popupOrderForm__help {
