--- a/resources/sass/blocks/popupOrderForm.scss
+++ b/resources/sass/blocks/popupOrderForm.scss
@@ -6,6 +6,9 @@
     display: flex;
     flex-direction: column;
     background: #fff;
+
+    background: url("/images/contact-bg2.jpg") center center no-repeat;
+    background-size: cover;
 }
 
 .popupOrderForm__help {
