--- a/resources/sass/manage.scss
+++ b/resources/sass/manage.scss
@@ -7,4 +7,7 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Font Awesome
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
+
 //@import "manage/custom";
