--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,8 +17,11 @@
 @import "blocks/main";
 @import "blocks/video";
 
+// owl.Carousel
 //@import "blocks/clients";
 //@import "blocks/carousel/owl.carousel";
+//@import "blocks/carousel/owl.theme.default";
+//@import "~owl.carousel";
 
 @import "blocks/services";
 @import "blocks/card";
