--- a/public/css/app.css
+++ b/public/css/app.css
@@ -877,17 +877,21 @@ body {
 
 .main {
   position: relative;
-  height: 100%;
+  height: 100vh;
   display: grid;
   grid-template-columns: minmax(200px, 30%) 70%;
+  grid-template-rows: auto 7rem;
 }
 
 .main__info {
   grid-column: span 1;
   grid-row: span 1;
   padding: 0 2rem;
-  margin: auto 0;
   text-align: center;
+}
+
+.main__info--wrapper {
+  margin: auto 0;
 }
 
 .main__title {
@@ -938,9 +942,9 @@ body {
   position: relative;
   grid-column: span 1;
   grid-row: span 1;
-  background-color: coral;
   background: url(/images/main-banner.jpg?2d95205273079e4d2c9ca1fde3d323a4) center center no-repeat;
   background-size: cover;
+  margin: 0;
   display: -webkit-box;
   display: flex;
   -webkit-box-pack: center;
@@ -969,17 +973,12 @@ body {
 }
 
 .main__partners {
-  position: fixed;
-  bottom: 0;
-  right: 0;
   grid-column: span 2;
   grid-row: span 1;
-  margin-left: 200px;
-  height: 5em;
-  width: calc(100% - 200px);
   background-color: grey;
-  z-index: 2;
   text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 @media (max-width: 980px) {
