--- a/resources/sass/blocks/clients.scss
+++ b/resources/sass/blocks/clients.scss
@@ -1,8 +1,13 @@
 
 
-.clients__carousel {
-    margin: 50px 0;
-    padding-left: 110px;
-    padding-right: 110px;
-    box-sizing: border-box;
-}
+//.clients__carousel {
+//    margin: 0;
+//    //padding-left: 110px;
+//    //padding-right: 110px;
+//    box-sizing: border-box;
+//}
+
+//.clients__carousel--item {
+//    width: 100px;
+//    margin: 0.5rem auto;
+//}
