--- a/resources/sass/blocks/main.scss
+++ b/resources/sass/blocks/main.scss
@@ -1,17 +1,20 @@
 .main {
     position: relative;
-    height: 100%;
+    height: 100vh;
     display: grid;
     grid-template-columns: minmax(200px, 30%) 70%;
+    grid-template-rows: auto 7rem;
 }
 
 .main__info {
     grid-column: span 1;
     grid-row: span 1;
     padding: 0 2rem;
-    //margin: 47% 0 53% 0;
-    margin: auto 0;
     text-align: center;
+}
+
+.main__info--wrapper {
+    margin: auto 0;
 }
 
 .main__title {
@@ -60,9 +63,10 @@
     position: relative;
     grid-column: span 1;
     grid-row: span 1;
-    background-color: coral;
+    //background-color: coral;
     background: url("../../img/main-banner.jpg") center center no-repeat;
     background-size: cover;
+    margin: 0;
 
     display: flex;
     justify-content: center;
@@ -89,17 +93,20 @@
 }
 
 .main__partners {
-    position: fixed;
-    bottom: 0;
-    right: 0;
+    //position: fixed;
+    //bottom: 0;
+    //right: 0;
     grid-column: span 2;
     grid-row: span 1;
-    margin-left: 200px;
-    height: 5em;
-    width: calc(100% - 200px);
+    //margin-left: 200px;
+  //width: 100%;
+  //  height: 100%;
+    //width: calc(100% - 200px);
     background-color: grey;
-    z-index: 2;
+    //z-index: 2;
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 
