--- a/resources/sass/manage.scss
+++ b/resources/sass/manage.scss
@@ -10,4 +10,7 @@
 // Font Awesome
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 
+// Select2
+@import "~select2";
+
 //@import "manage/custom";
