--- a/resources/sass/blocks/clients.scss
+++ b/resources/sass/blocks/clients.scss
@@ -7,7 +7,17 @@
 //    box-sizing: border-box;
 //}
 
-//.clients__carousel--item {
-//    width: 100px;
-//    margin: 0.5rem auto;
+//.owl-item {
+//  margin-top: auto;
+//  margin-bottom: auto;
 //}
+
+.clients__carousel--item {
+    //margin: 0.5rem auto;
+  margin-top: auto;
+  margin-bottom: auto;
+
+  img {
+    //height: 5rem;
+  }
+}
