--- a/resources/sass/blocks/main.scss
+++ b/resources/sass/blocks/main.scss
@@ -98,10 +98,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-left: 2rem;
+    //padding-left: 2rem;
 
-    background-color: grey;
-    text-align: center;
+    //background-color: grey;
+    //text-align: center;
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -111,7 +111,7 @@
 
     .main {
         grid-template-columns: 1fr;
-        height: 89vh;
+        //height: 89vh;
     }
 
     .main__info {
@@ -135,11 +135,12 @@
 
     .main__partners {
         order: 3;
-        position: relative;
-        margin-left: 0;
-        width: 100%;
+        //position: relative;
+        //margin-left: 0;
+        //width: 100%;
         grid-column: span 1;
         grid-row: span 1;
         margin-top: auto;
+        margin-bottom: 0;
     }
 }
