--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -31,6 +31,6 @@
 @import "blocks/popupOrderForm";
 
 // owl.Carousel
-@import "~owl.carousel";
+//@import "~owl.carousel";
 //@import "blocks/clients";
 @import "blocks/partners";
