--- a/resources/sass/blocks/main.scss
+++ b/resources/sass/blocks/main.scss
@@ -111,7 +111,7 @@
 
     .main {
         grid-template-columns: 1fr;
-        //height: 89vh;
+        height: 100%;
     }
 
     .main__info {
@@ -120,7 +120,7 @@
         grid-row: span 1;
         margin-top: 5%;
         margin-bottom: auto;
-        //max-height: 100%;
+        height: 100%;
 
         .main__text {
             margin-top: 5%;
